--- a/Animated Search Engine Bar.html
+++ b/Animated Search Engine Bar.html
@@ -1,7 +1,9 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="Animated Search Engine Bar.css">
     <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> 
+        <link rel="icon" href="search-engine.png">  
+        <title>Animated Search Engine</title> 
 </head>
 
 <!-- HTML -->
